# pastry

./: .env.sample  Makefile  compose.yaml  conftest.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: Dockerfile.dev  pyproject.toml
api/src/pastry_api/: __init__.py  auth_repo.py  auth_service.py  config.py  db.py  deps.py  github.py  main.py  repository.py  security.py
api/src/pastry_api/routers/: auth.py  pastes.py
api/src/pastry_api/scripts/: __init__.py  create_table.py
api/tests/: conftest.py  test_auth.py  test_cors.py  test_github_client.py  test_health.py  test_me.py  test_pastes_api.py  test_repository.py
api/tests/integration/: test_auth.py  test_cors.py  test_hardening_api.py  test_me.py  test_pastes_api.py  test_repository.py
api/tests/smoke/: test_health.py
api/tests/unit/: test_auth_tokens.py  test_github_client.py  test_hardening.py
cli/: pyproject.toml
cli/src/pastry_cli/: __init__.py  api.py  auth.py  cli.py  config.py  session.py
cli/tests/: test_api_paths.py  test_cli.py  test_config.py  test_session.py
infra/: apigateway.tf  domain.tf  dynamodb.tf  frontend.tf  lambda.tf  locals.tf  oidc.tf  outputs.tf  providers.tf  secrets.tf  variables.tf
infra/bootstrap/: main.tf
scripts/: build-lambda.sh  pre-commit.sh
shared/: pyproject.toml
shared/src/pastry_shared/: __init__.py  ids.py  models.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  auth.ts  main.tsx  styles.css  types.ts
web/src/routes/: Callback.tsx  Home.tsx  PastePage.tsx
web/tests/: App.test.tsx  Callback.test.tsx  Home.test.tsx  PastePage.test.tsx  api.oauth.test.ts  api.refresh.test.tsx
