# uv workspace root for the Python side of Pastry (backend + cli + shared).
# Frontend (npm/Vite) and infra (OpenTofu) live outside this workspace.
[project]
name = "pastry-workspace"
version = "0"
description = "Pastry monorepo — Python workspace root (not a distributable package)"
requires-python = ">=3.12"

[tool.uv]
package = false
# Sync these groups by default, so a bare `uv sync` installs the full workspace
# (every member + its runtime deps) instead of pruning to just the root + dev.
# This makes `uv sync` equivalent to `uv sync --all-packages`.
default-groups = ["dev", "workspace"]

[tool.uv.workspace]
members = [
    "api",
    "cli",
    "shared"
]

[tool.uv.sources]
pastry-api = { workspace = true }
pastry-cli = { workspace = true }
pastry-shared = { workspace = true }

[dependency-groups]
# Shared dev tooling across all members.
dev = [
    "boto3-stubs[dynamodb]>=1.35",
    # Enables `fastapi dev` (reload loop) against the entrypoint declared in
    # api/pyproject.toml. Dev-only on purpose: the container still runs uvicorn
    # directly and installs with --no-dev, so the Lambda artifact is unaffected.
    "fastapi-cli>=0.0.5",
    "httpx>=0.27",
    "moto[dynamodb]>=5",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "ty>=0.0.60",
    "types-pyperclip>=1.9",
]

# The workspace members themselves (editable). Kept in a default group so the
# IDE's venv always resolves fastapi/mangum/etc. that the members depend on.
workspace = [
    "pastry-api",
    "pastry-cli",
    "pastry-shared",
]

[tool.pytest.ini_options]
testpaths = [
    "api/tests",
    "cli/tests",
]
# Coverage is scoped to the api + cli packages; pastry_shared is exercised only
# indirectly and would report a misleadingly low number, so it's left out.
addopts = "--strict-markers --cov=pastry_api --cov=pastry_cli --cov-report=term-missing"
markers = [
    "unit: fast, isolated test with no I/O — no moto table and no app client",
    "integration: exercises the app or repository against the moto-mocked DynamoDB",
    "smoke: minimal end-to-end check that the app wires up and serves",
]
filterwarnings = [
    # short signing keys are test-only; real keys come from SSM/Secrets Manager
    "ignore:The HMAC key is:UserWarning",
    # starlette's own TestClient/httpx deprecation, not our code
    "ignore:Using .httpx. with .starlette.testclient.",
]

[tool.coverage.run]
source_pkgs = ["pastry_api", "pastry_cli"]
# These packages are imported during pytest startup (conftest/test collection)
# before coverage attaches; measurement still lands via the source files, so the
# resulting "previously imported, but not measured" warning is just noise.
disable_warnings = ["module-not-measured"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    # Listed explicitly: the `E` group alone leaves it off, which would make the
    # deliberate late imports in the conftests read as unnecessary `noqa`s.
    "E402",
    "F",    # pyflakes
    "I",    # import sorting
    "B",    # bugbear — notably B904, exception chaining in `except` blocks
    "UP",   # pyupgrade
    "SIM",  # simplifications
    "RUF",
    "ANN",  # every function annotated
]

[tool.ruff.lint.pycodestyle]
# `ruff format` wraps *code* at the default 88 but never reflows comments or docstrings,
# so a stricter E501 would just flag prose the formatter refuses to fix. Give the prose
# headroom and let the formatter stay the authority on code width.
max-line-length = 96

[tool.ruff.lint.per-file-ignores]
# Tests are annotated for their arguments (fixtures) but pytest ignores return types,
# and `assert` on private helpers is the point of a test suite.
"**/tests/**" = ["ANN401"]

[tool.ty.environment]
python-version = "3.12"
python = "./.venv"
