[project]
name = "pastry-api"
version = "0.1.0"
description = "Pastry backend — FastAPI on Lambda over DynamoDB"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2",
    "pydantic-settings>=2",
    "boto3>=1.35",
    "mangum>=0.19",
    "pyjwt>=2.9",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "pastry-shared",
]

[tool.fastapi]
entrypoint = "pastry_api.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pastry_api"]
