[project]
name = "pastry-cli"
version = "0.1.0"
description = "Pastry CLI — the `pastry` command"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "keyring>=25",
    "pastry-shared",
]

[project.scripts]
pastry = "pastry_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pastry_cli"]
