[project]
name = "pastry-shared"
version = "0.1.0"
description = "Shared pydantic models and id helpers for Pastry (backend + cli)"
requires-python = ">=3.12"
dependencies = [
    "base32-crockford>=0.3.0",
    "pydantic>=2",
    "svix-ksuid>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pastry_shared"]
